--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cycler==0.12.1
 Flask==3.0.1
 Flask-APScheduler==1.13.1
 fonttools==4.47.2
+gunicorn==21.2.0
 holidays==0.41
 idna==3.6
 itsdangerous==2.1.2
